# hearth-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
crates/hearth-brain/: Cargo.toml
crates/hearth-brain/src/: clock.rs  compile.rs  gitstore.rs  lib.rs  log.rs  main.rs  recall.rs  schema.rs  wiki.rs
crates/hearth-mcp/: Cargo.toml
crates/hearth-mcp-fs/: Cargo.toml
crates/hearth-mcp-fs/src/: main.rs
crates/hearth-mcp/src/: lib.rs
crates/hearth-model/: Cargo.toml
crates/hearth-model/src/: lib.rs
crates/hearth-substrate/: Cargo.toml
crates/hearth-substrate/src/: lib.rs
crates/hearthd/: Cargo.toml
crates/hearthd/src/: capability.rs  lib.rs  main.rs  mcp.rs  plan.rs  planner.rs  prompt.rs  protocol.rs  server.rs  surface.rs  voice.rs
docs/: AGENT-TRUST-MODEL.md  APP-MODEL.md  BROWSER-B1-ARCHITECTURE.md  BROWSER-INTEGRATION.md  SHELL-PROTOCOL.md  UI-SOUL.md  VISION-AND-ARCHITECTURE.md
mockup/: index.html  the-hearth.html
