[package]
name = "hearth-mcp"
version = "0.1.0"
description = "Minimal MCP (Model Context Protocol) over stdio — both the server helper and the client (host)."
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
