[package]
name = "hearth-model"
version = "0.1.0"
description = "The neutral model router for Hearth OS — the intelligence is a swappable organ."
edition.workspace = true
license.workspace = true

# Neutral by construction: local / API / subscription backends all implement one
# trait, and nothing above the router knows which is active. The base build is
# pure-Rust and fully offline; the real HTTP backend is opt-in behind `online`.

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
