[package]
name = "hearthd"
version = "0.1.0"
description = "The Hearth agent runtime — the mind: intent → plan → act, over the Brain and the capability fabric."
edition.workspace = true
license.workspace = true

[[bin]]
name = "hearthd"
path = "src/main.rs"

[dependencies]
hearth-model = { path = "../hearth-model" }
hearth-brain = { path = "../hearth-brain" }
hearth-substrate = { path = "../hearth-substrate" }
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
